5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4061/executions/1643_2446.log
== TEST (2019-04-14 22:19:39) 
-- CODE:
senha = int(input("digite senha: "))
a = senha // 100000
b = (senha // 100000)// 10000
c = ((senha // 100000)// 10000) // 1000
d = (((senha // 100000)// 10000) // 1000) // 100
e = ((((senha // 100000)// 10000) // 1000) // 100) // 10
f = ((((senha // 100000)// 10000) // 1000) // 100) % 10

if((b+d+f)%(a+c+e)==0):
	mensagem = ("acesso liberado")
else:
	mensagem = ("senha invalida")

print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if((b+d+f)%(a+c+e)==0):
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:20:54) 
-- CODE:
senha = int(input("digite senha: "))
a = senha // 100000
b = (senha // 100000)// 10000
c = ((senha // 100000)// 10000) // 1000
d = (((senha // 100000)// 10000) // 1000) // 100
e = ((((senha // 100000)// 10000) // 1000) // 100) // 10
f = ((((senha // 100000)// 10000) // 1000) // 100) % 10
g =(b+d+f)%(a+c+e)
if(g==0):
	mensagem = ("acesso liberado")
else:
	mensagem = ("senha invalida")

print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    g =(b+d+f)%(a+c+e)
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:21:10) 
-- CODE:
senha = int(input("digite senha: "))
a = senha // 100000
b = (senha // 100000)// 10000
c = ((senha // 100000)// 10000) // 1000
d = (((senha // 100000)// 10000) // 1000) // 100
e = ((((senha // 100000)// 10000) // 1000) // 100) // 10
f = ((((senha // 100000)// 10000) // 1000) // 100) % 10
g =(b+d+f)%(a+c+e)
if(g==0):
	mensagem = ("acesso liberado")
else:
	mensagem = ("senha invalida")

print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    g =(b+d+f)%(a+c+e)
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:21:24) 
-- CODE:
senha = int(input("digite senha: "))
a = senha // 100000
b = (senha // 100000)// 10000
c = ((senha // 100000)// 10000) // 1000
d = (((senha // 100000)// 10000) // 1000) // 100
e = ((((senha // 100000)// 10000) // 1000) // 100) // 10
f = ((((senha // 100000)// 10000) // 1000) // 100) % 10
g =(b+d+f)%(a+c+e)
if(g==0):
	mensagem = ("acesso liberado")
else:
	mensagem = ("senha invalida")

print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    g =(b+d+f)%(a+c+e)
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:24:03) 
-- CODE:
senha = int(input("digite senha: "))
a = senha // 100000
b = (senha // 100000)// 10000
c = ((senha // 100000)// 10000) // 1000
d = (((senha // 100000)// 10000) // 1000) // 100
e = ((((senha // 100000)// 10000) // 1000) // 100) // 10
f = ((((senha // 100000)// 10000) // 1000) // 100) % 10
g =(b+d+f)%(a+c+e)
if(g):
	mensagem = ("acesso liberado")
else:
	mensagem = ("senha invalida")

print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    g =(b+d+f)%(a+c+e)
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:24:35) 
-- CODE:
senha = int(input("digite senha: "))
a = senha // 100000
b = (senha // 100000)// 10000
c = ((senha // 100000)// 10000) // 1000
d = (((senha // 100000)// 10000) // 1000) // 100
e = ((((senha // 100000)// 10000) // 1000) // 100) // 10
f = ((((senha // 100000)// 10000) // 1000) // 100) % 10
g =(b+d+f)%(a+c+e)
if(g):
	mensagem = ("acesso liberado")
else:
	mensagem = ("senha invalida")

print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    g =(b+d+f)%(a+c+e)
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:24:49) 
-- CODE:
senha = int(input("digite senha: "))
a = senha // 100000
b = (senha // 100000)// 10000
c = ((senha // 100000)// 10000) // 1000
d = (((senha // 100000)// 10000) // 1000) // 100
e = ((((senha // 100000)// 10000) // 1000) // 100) // 10
f = ((((senha // 100000)// 10000) // 1000) // 100) % 10
g =(b+d+f)%(a+c+e)
if(g):
	mensagem = ("acesso liberado")
else:
	mensagem = ("senha invalida")

print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    g =(b+d+f)%(a+c+e)
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:26:30) 
-- CODE:
senha = int(input("digite senha: "))
a = senha // 100000
b = (senha // 100000)// 10000
c = ((senha // 100000)// 10000) // 1000
d = (((senha // 100000)// 10000) // 1000) // 100
e = ((((senha // 100000)// 10000) // 1000) // 100) // 10
f = ((((senha // 100000)// 10000) // 1000) // 100) % 10
g =(b+d+f)/(a+c+e)
if(g):
	mensagem = ("acesso liberado")
else:
	mensagem = ("senha invalida")

print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    g =(b+d+f)/(a+c+e)
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:27:13) 
-- CODE:
senha = int(input("digite senha: "))
a = senha // 100000
b = (senha // 100000)// 10000
c = ((senha // 100000)// 10000) // 1000
d = (((senha // 100000)// 10000) // 1000) // 100
e = ((((senha // 100000)// 10000) // 1000) // 100) // 10
f = ((((senha // 100000)// 10000) // 1000) // 100) % 10
g =(b+d+f)/(a+c+e)
if(g):
	mensagem = ("acesso liberado")
else:
	mensagem = ("senha invalida")

print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    g =(b+d+f)/(a+c+e)
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:27:46) 
-- CODE:
senha = int(input("digite senha: "))
a = senha // 100000
b = (senha // 100000)// 10000
c = ((senha // 100000)// 10000) // 1000
d = (((senha // 100000)// 10000) // 1000) // 100
e = ((((senha // 100000)// 10000) // 1000) // 100) // 10
f = ((((senha // 100000)// 10000) // 1000) // 100) % 10
g =(b+d+f)/(a+c+e)
if(g):
	mensagem = ("acesso liberado")
else:
	mensagem = ("senha invalida")

print(a)
print(b)print(c)print(d)print(e)print(f)
-- ERROR:
File "XXXX", line 15
    print(b)print(c)print(d)print(e)print(f)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:28:00) 
-- CODE:
senha = int(input("digite senha: "))
a = senha // 100000
b = (senha // 100000)// 10000
c = ((senha // 100000)// 10000) // 1000
d = (((senha // 100000)// 10000) // 1000) // 100
e = ((((senha // 100000)// 10000) // 1000) // 100) // 10
f = ((((senha // 100000)// 10000) // 1000) // 100) % 10
g =(b+d+f)/(a+c+e)
if(g):
	mensagem = ("acesso liberado")
else:
	mensagem = ("senha invalida")

print(a)
print(b)
print(c)
print(d)
print(e)
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    g =(b+d+f)/(a+c+e)
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:31:06) 
-- CODE:
senha = int(input("digite senha: "))
a = senha // 100000
b = (senha // 10000)// 1000
c = ((senha // 100000)// 10000) // 1000
d = (((senha // 100000)// 10000) // 1000) // 100
e = ((((senha // 100000)// 10000) // 1000) // 100) // 10
f = ((((senha // 100000)// 10000) // 1000) // 100) % 10
g =(b+d+f)/(a+c+e)
if(g):
	mensagem = ("acesso liberado")
else:
	mensagem = ("senha invalida")

print(a)
print(b)
print(c)
print(d)
print(e)
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    g =(b+d+f)/(a+c+e)
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:31:20) 
-- CODE:
senha = int(input("digite senha: "))
a = senha // 100000
b = (senha // 1000)// 100
c = ((senha // 100000)// 10000) // 1000
d = (((senha // 100000)// 10000) // 1000) // 100
e = ((((senha // 100000)// 10000) // 1000) // 100) // 10
f = ((((senha // 100000)// 10000) // 1000) // 100) % 10
g =(b+d+f)/(a+c+e)
if(g):
	mensagem = ("acesso liberado")
else:
	mensagem = ("senha invalida")

print(a)
print(b)
print(c)
print(d)
print(e)
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    g =(b+d+f)/(a+c+e)
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:31:34) 
-- CODE:
senha = int(input("digite senha: "))
a = senha // 100000
b = (senha // 1000)// 10
c = ((senha // 100000)// 10000) // 1000
d = (((senha // 100000)// 10000) // 1000) // 100
e = ((((senha // 100000)// 10000) // 1000) // 100) // 10
f = ((((senha // 100000)// 10000) // 1000) // 100) % 10
g =(b+d+f)/(a+c+e)
if(g):
	mensagem = ("acesso liberado")
else:
	mensagem = ("senha invalida")

print(a)
print(b)
print(c)
print(d)
print(e)
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    g =(b+d+f)/(a+c+e)
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:32:16) 
-- CODE:
senha = int(input("digite senha: "))
a = senha // 100000
b = ((senha // 1000)// 10) % 10
c = ((senha // 100000)// 10000) // 1000
d = (((senha // 100000)// 10000) // 1000) // 100
e = ((((senha // 100000)// 10000) // 1000) // 100) // 10
f = ((((senha // 100000)// 10000) // 1000) // 100) % 10
g =(b+d+f)/(a+c+e)
if(g):
	mensagem = ("acesso liberado")
else:
	mensagem = ("senha invalida")

print(a)
print(b)
print(c)
print(d)
print(e)
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    g =(b+d+f)/(a+c+e)
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:33:18) 
-- CODE:
senha = int(input("digite senha: "))
a = senha // 100000
b = ((senha // 1000)// 10) % 10
c = ((senha // 100)// 100) % 10
d = ((senha // 10)// 1000) % 10
e = ((senha // 1000)// 10) % 10
f = ((senha // 1000)// 10) % 10
g =(b+d+f)/(a+c+e)
if(g):
	mensagem = ("acesso liberado")
else:
	mensagem = ("senha invalida")

print(a)
print(b)
print(c)
print(d)
print(e)
print(f)
-- OUTPUT:
0
8
8
8
8
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:33:45) 
-- CODE:
senha = int(input("digite senha: "))
a = senha // 100000
b = ((senha // 1000)// 10) % 10
c = ((senha // 100)// 100) // 10
d = ((senha // 10)// 1000) % 10
e = ((senha // 1000)// 10) % 10
f = ((senha // 1000)// 10) % 10
g =(b+d+f)/(a+c+e)
if(g):
	mensagem = ("acesso liberado")
else:
	mensagem = ("senha invalida")

print(a)
print(b)
print(c)
print(d)
print(e)
print(f)
-- OUTPUT:
0
8
0
8
8
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:41:23) 
-- CODE:
senha = int(input("digite senha: "))
a = senha // 100000
b = ((senha // 100000)// 100000) 
c = ((senha // 100)// 100) // 10
d = ((senha // 10)// 1000) % 10
e = ((senha // 1000)// 10) % 10
f = ((senha // 1000)// 10) % 10
g =(b+d+f)/(a+c+e)
if(g):
	mensagem = ("acesso liberado")
else:
	mensagem = ("senha invalida")

print(a)
print(b)
print(c)
print(d)
print(e)
print(f)
-- EXECUTION TIME:
0.18465
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
0
0
0
8
8
8
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
7
0
7
6
6
6
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
1
0
1
2
2
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:41:25) 
-- CODE:
senha = int(input("digite senha: "))
a = senha // 100000
b = ((senha // 100000)// 100000) 
c = ((senha // 100)// 100) // 10
d = ((senha // 10)// 1000) % 10
e = ((senha // 1000)// 10) % 10
f = ((senha // 1000)// 10) % 10
g =(b+d+f)/(a+c+e)
if(g):
	mensagem = ("acesso liberado")
else:
	mensagem = ("senha invalida")

print(a)
print(b)
print(c)
print(d)
print(e)
print(f)
-- OUTPUT:
0
0
0
8
8
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:42:19) 
-- CODE:
senha = int(input("digite senha: "))
a = senha // 100000
b = ((senha // 100000)% 100000) 
c = ((senha // 100)// 100) // 10
d = ((senha // 10)// 1000) % 10
e = ((senha // 1000)// 10) % 10
f = ((senha // 1000)// 10) % 10
g =(b+d+f)/(a+c+e)
if(g):
	mensagem = ("acesso liberado")
else:
	mensagem = ("senha invalida")

print(a)
print(b)
print(c)
print(d)
print(e)
print(f)
-- OUTPUT:
0
0
0
8
8
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:43:20) 
-- CODE:
senha = int(input("digite senha: "))
a = senha // 100000
b = ((senha - 100000)// 100000) 
c = ((senha // 100)// 100) // 10
d = ((senha // 10)// 1000) % 10
e = ((senha // 1000)// 10) % 10
f = ((senha // 1000)// 10) % 10
g =(b+d+f)/(a+c+e)
if(g):
	mensagem = ("acesso liberado")
else:
	mensagem = ("senha invalida")

print(a)
print(b)
print(c)
print(d)
print(e)
print(f)
-- OUTPUT:
0
-1
0
8
8
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:43:34) 
-- CODE:
senha = int(input("digite senha: "))
a = senha // 100000
b = ((senha - 100000)// 10000) 
c = ((senha // 100)// 100) // 10
d = ((senha // 10)// 1000) % 10
e = ((senha // 1000)// 10) % 10
f = ((senha // 1000)// 10) % 10
g =(b+d+f)/(a+c+e)
if(g):
	mensagem = ("acesso liberado")
else:
	mensagem = ("senha invalida")

print(a)
print(b)
print(c)
print(d)
print(e)
print(f)
-- OUTPUT:
0
-2
0
8
8
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:45:49) 
-- CODE:
senha = int(input("digite senha: "))
a = senha // 100000
b = (senha - 100000) // 10000
c = (senha // 1000) % 100
d = ((senha // 10)// 1000) % 10
e = ((senha // 1000)// 10) % 10
f = ((senha // 1000)// 10) % 10
g =(b+d+f)/(a+c+e)
if(g):
	mensagem = ("acesso liberado")
else:
	mensagem = ("senha invalida")

print(a)
print(b)
print(c)
print(d)
print(e)
print(f)
-- OUTPUT:
0
-2
87
8
8
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:46:05) 
-- CODE:
senha = int(input("digite senha: "))
a = senha // 100000
b = (senha - 100000) // 10000
c = (senha // 1000) % 10
d = ((senha // 10)// 1000) % 10
e = ((senha // 1000)// 10) % 10
f = ((senha // 1000)// 10) % 10
g =(b+d+f)/(a+c+e)
if(g):
	mensagem = ("acesso liberado")
else:
	mensagem = ("senha invalida")

print(a)
print(b)
print(c)
print(d)
print(e)
print(f)
-- OUTPUT:
0
-2
7
8
8
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:48:31) 
-- CODE:
senha = int(input("digite senha: "))
a = senha // 100000
b = (senha - 100000) // 10000
c = (senha // 1000) % 10
d = (senha // 100) % 100
e = ((senha // 1000)// 10) % 10
f = ((senha // 1000)// 10) % 10
g =(b+d+f)/(a+c+e)
if(g):
	mensagem = ("acesso liberado")
else:
	mensagem = ("senha invalida")

print(a)
print(b)
print(c)
print(d)
print(e)
print(f)
-- OUTPUT:
0
-2
7
76
8
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:48:40) 
-- CODE:
senha = int(input("digite senha: "))
a = senha // 100000
b = (senha - 100000) // 10000
c = (senha // 1000) % 10
d = (senha // 100) % 10
e = ((senha // 1000)// 10) % 10
f = ((senha // 1000)// 10) % 10
g =(b+d+f)/(a+c+e)
if(g):
	mensagem = ("acesso liberado")
else:
	mensagem = ("senha invalida")

print(a)
print(b)
print(c)
print(d)
print(e)
print(f)
-- OUTPUT:
0
-2
7
6
8
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:48:57) 
-- CODE:
senha = int(input("digite senha: "))
a = senha // 100000
b = (senha - 100000) // 10000
c = (senha // 1000) % 10
d = (senha // 100) % 10
e = (senha // 10) % 10
f = ((senha // 1000)// 10) % 10
g =(b+d+f)/(a+c+e)
if(g):
	mensagem = ("acesso liberado")
else:
	mensagem = ("senha invalida")

print(a)
print(b)
print(c)
print(d)
print(e)
print(f)
-- OUTPUT:
0
-2
7
6
1
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:49:17) 
-- CODE:
senha = int(input("digite senha: "))
a = senha // 100000
b = (senha - 100000) // 10000
c = (senha // 1000) % 10
d = (senha // 100) % 10
e = (senha // 10) % 10
f = (senha // 1) % 10
g =(b+d+f)/(a+c+e)
if(g):
	mensagem = ("acesso liberado")
else:
	mensagem = ("senha invalida")

print(a)
print(b)
print(c)
print(d)
print(e)
print(f)
-- OUTPUT:
0
-2
7
6
1
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:49:40) 
-- CODE:
senha = int(input("digite senha: "))
a = senha // 100000
b = (senha // 10000) % 10
c = (senha // 1000) % 10
d = (senha // 100) % 10
e = (senha // 10) % 10
f = (senha // 1) % 10
g =(b+d+f)/(a+c+e)
if(g):
	mensagem = ("acesso liberado")
else:
	mensagem = ("senha invalida")

print(a)
print(b)
print(c)
print(d)
print(e)
print(f)
-- OUTPUT:
0
8
7
6
1
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:50:08) 
-- CODE:
senha = int(input("digite senha: "))
a = senha // 100000
b = (senha // 10000) % 10
c = (senha // 1000) % 10
d = (senha // 100) % 10
e = (senha // 10) % 10
f = (senha // 1) % 10
g =(b+d+f)/(a+c+e)
if(g):
	mensagem = ("acesso liberado")
else:
	mensagem = ("senha invalida")

print(g)
-- OUTPUT:
2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:50:27) 
-- CODE:
senha = int(input("digite senha: "))
a = senha // 100000
b = (senha // 10000) % 10
c = (senha // 1000) % 10
d = (senha // 100) % 10
e = (senha // 10) % 10
f = (senha // 1) % 10
g =(b+d+f)%(a+c+e)
if(g):
	mensagem = ("acesso liberado")
else:
	mensagem = ("senha invalida")

print(g)
-- OUTPUT:
2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:50:40) 
-- CODE:
senha = int(input("digite senha: "))
a = senha // 100000
b = (senha // 10000) % 10
c = (senha // 1000) % 10
d = (senha // 100) % 10
e = (senha // 10) % 10
f = (senha // 1) % 10
g =(b+d+f)//(a+c+e)
if(g):
	mensagem = ("acesso liberado")
else:
	mensagem = ("senha invalida")

print(g)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:50:47) 
-- CODE:
senha = int(input("digite senha: "))
a = senha // 100000
b = (senha // 10000) % 10
c = (senha // 1000) % 10
d = (senha // 100) % 10
e = (senha // 10) % 10
f = (senha // 1) % 10
g =(b+d+f)//(a+c+e)
if(g):
	mensagem = ("acesso liberado")
else:
	mensagem = ("senha invalida")

print(g)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:51:11) 
-- CODE:
senha = int(input("digite senha: "))
a = senha // 100000
b = (senha // 10000) % 10
c = (senha // 1000) % 10
d = (senha // 100) % 10
e = (senha // 10) % 10
f = (senha // 1) % 10
g =(b+d+f)//(a+c+e)
if(g):
	mensagem = ("acesso liberado")
else:
	mensagem = ("senha invalida")

print(g)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:51:32) 
-- CODE:
senha = int(input("digite senha: "))
a = senha // 100000
b = (senha // 10000) % 10
c = (senha // 1000) % 10
d = (senha // 100) % 10
e = (senha // 10) % 10
f = (senha // 1) % 10
g =(b+d+f)%(a+c+e)
if(g):
	mensagem = ("acesso liberado")
else:
	mensagem = ("senha invalida")

print(g)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:51:47) 
-- CODE:
senha = int(input("digite senha: "))
a = senha // 100000
b = (senha // 10000) % 10
c = (senha // 1000) % 10
d = (senha // 100) % 10
e = (senha // 10) % 10
f = (senha // 1) % 10
g =(b+d+f)%(a+c+e)
if(g):
	mensagem = ("acesso liberado")
else:
	mensagem = ("senha invalida")

print(g)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:53:16) 
-- CODE:
senha = int(input("digite senha: "))
a = senha // 100000
b = (senha // 10000) % 10
c = (senha // 1000) % 10
d = (senha // 100) % 10
e = (senha // 10) % 10
f = (senha // 1) % 10
g =(b+d+f)%(a+c+e)
if(g==0):
	mensagem = ("acesso liberado")
else:
	mensagem = ("senha invalida")

print(mensagem)
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:53:16) 
-- CODE:
senha = int(input("digite senha: "))

a = senha // 100000
b = (senha // 10000) % 10
c = (senha // 1000) % 10
d = (senha // 100) % 10
e = (senha // 10) % 10
f = (senha // 1) % 10
g =(b+d+f)%(a+c+e)

if(g==0):
	mensagem = ("acesso liberado")
else:
	mensagem = ("senha invalida")

print(mensagem)
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:53:22) 
-- CODE:
senha = int(input("digite senha: "))
a = senha // 100000
b = (senha // 10000) % 10
c = (senha // 1000) % 10
d = (senha // 100) % 10
e = (senha // 10) % 10
f = (senha // 1) % 10
g =(b+d+f)%(a+c+e)
if(g==0):
	mensagem = ("acesso liberado")
else:
	mensagem = ("senha invalida")

print(mensagem)
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:53:34) 
-- CODE:
senha = int(input("digite senha: "))

a = senha // 100000
b = (senha // 10000) % 10
c = (senha // 1000) % 10
d = (senha // 100) % 10
e = (senha // 10) % 10
f = (senha // 1) % 10
g =(b+d+f)%(a+c+e)

if(g==0):
	mensagem = ("acesso liberado")
else:
	mensagem = ("senha invalida")

print(mensagem)
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:53:50) 
-- CODE:
senha = int(input("digite senha: "))

a = senha // 100000
b = (senha // 10000) % 10
c = (senha // 1000) % 10
d = (senha // 100) % 10
e = (senha // 10) % 10
f = (senha // 1) % 10
g =(b+d+f)%(a+c+e)

if(g==0):
	mensagem = ("acesso liberado")
else:
	mensagem = ("senha invalida")

print(mensagem)
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:54:39) 
-- CODE:
senha = int(input("digite senha: "))

a = senha // 100000
b = (senha // 10000) % 10
c = (senha // 1000) % 10
d = (senha // 100) % 10
e = (senha // 10) % 10
f = (senha // 1) % 10
g = (b+d+f) % (a+c+e)

if(g==0):
	mensagem = ("acesso liberado")
else:
	mensagem = ("senha invalida")

print(mensagem)
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:57:02) 
-- CODE:
senha = int(input("digite senha: "))

a = senha // 100000
b = (senha // 10000) % 10
c = (senha // 1000) % 10
d = (senha // 100) % 10
e = (senha // 10) % 10
f = (senha // 1) % 10
g = (b+d+f) % (a+c+e)

if(g==0):
	mensagem = ("acesso liberado")
else:
	mensagem = ("senha invalida")

print(mensagem)
-- EXECUTION TIME:
0.111949
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
